jwt auth + refactor
